# vln_thesis

./: README.md
autonomousPro/: README.md  quick_save_map.sh  readme.md
autonomousPro/src/: commonCmds.md
autonomousPro/src/aws-robomaker-hospital-world/launch/: hospital_optimized.launch.py
autonomousPro/src/aws_robomaker_small_warehouse_world/: CMakeLists.txt
autonomousPro/src/common_interface/: CMakeLists.txt
autonomousPro/src/common_interface/msg/: Camera2map.msg
autonomousPro/src/maps/: CMakeLists.txt  README.md  package.xml
autonomousPro/src/maps/launch/: continue_mapping_real_env.launch.py  continue_mapping_sim_environment.launch.py  save_map_real_env.launch.py  save_map_simulation_env.launch.py
autonomousPro/src/maps/maps/simulation_env/: combined_scans.pbstream  combined_scans.pgm  combined_scans.yaml
autonomousPro/src/my_bringup/: package.xml  setup.py
autonomousPro/src/my_bringup/launch/: hardware_bringup.launch.py  launch_all_with_map.launch.py  launch_all_without_map.launch.py
autonomousPro/src/robot_control_hardware/: package.xml  setup.cfg  setup.py
autonomousPro/src/robot_description/: CMakeLists.txt  package.xml
autonomousPro/src/robot_description/config/: joint_controller.yaml
autonomousPro/src/robot_description/rviz/: urdf.rviz
autonomousPro/src/robot_description/urdf/: Assembly-Robot-URDF.urdf.xacro  autonomous_robot.urdf.xacro  autonomous_robot_gazebo.xacro  common_properties.xacro  lidar.xacro  ros2_control.xacro
autonomousPro/src/robot_mpu9250_driver/: CMakeLists.txt  package.xml
autonomousPro/src/robot_navigation/: package.xml  setup.py
autonomousPro/src/robot_rs_camera_driver/: package.xml  setup.cfg  setup.py
autonomousPro/src/robot_simulation/: package.xml  setup.py
autonomousService/: .gitignore  README.md
autonomousService/src/: goundingDinoTest.py  memory.yaml
autonomousService/src/GUI/: .gitignore  LICENSE  README.md  requirements.txt  robot_chat_gui.py
autonomousService/src/detect_vl/: README_YOLOv11_Object365.md  README_door_transition.md  package.xml  requirements.txt  setup.py  task_nav.txt
autonomousService/weights/: yolo11n_object365
(+46 files in other folders)
